--- a/style.css
+++ b/style.css
@@ -1,199 +1,391 @@
+
+
 body{
-    min-height: 100%;
+    background-color:#3882F6 ;
+    margin: 0px;
+    height: 99vh;
+    width: 99vw;
     display: flex;
     flex-direction: column;
-    margin: 0;
 }
-.header{
-    min-height: 50px;
-    background-color: #1F2937;
+.header{ 
+    background-color:#3882F6;
+    margin: 0px;
+    height: 5vh;
+    width:99vw;
     display: flex;
     justify-content: space-between;
 }
-.headerlink{
-    margin-top: 5px;
+img{
+    width: 10px;
+    height: 10px;
+}
+.top{
+    background-color: #3882F6;
+    justify-content: space-between;
     display: flex;
-    gap: 20px;
-    margin-right: 100px;
+    margin: 1vh;
+    width: 99vw;
+    height: 99vh;
+}
+.headerlogo{
+    margin: 1vh;
+}
+.headerlink{
+    display: flex;
+    gap: 3vw;
+    margin: 1vh;
+    text-decoration: none;
+    
 }
 a{
     text-decoration: none;
-    color: aliceblue;
-}
-.headerlogo{
-    margin-left: 100px;
-    margin-top: 5px;
-    color: whitesmoke;
-    font-weight: bold;
-}
-.top{
-    justify-content: space-between;
-    min-height:300px ;
-    display: flex;
-    color:#F9FaF8 ;
-    background-color: #1F2937;
-}
-.right{
-    width: 400px;
-    height: 150px;
-    background-color:#1F2937;
-}
-.thiswebsite{
-font-weight:bolder;
-font-size: 48px;
-}
-.websitedescription{
-    width: 500px;
-font-size: 18px;
-color: #e5e7eb;    
-}
-.right{
-    margin-right: 100px;
-}
-.left{
-    margin-left: 20px;
-    margin-right: 30px;
-    flex-wrap: wrap;
-}
-.signuptop{
-    background-color:#3882F6;
-    color: #e5e7eb;
-    font-weight: bold;
-    margin-top: 5px;
-    border-radius: 6px;
-    border: 1;
-    border-color: #F9FaF8;
-    width: 100px;
+    color: black;
 }
 .image1{
-    width: 400px;
-    height: 150px;
-    border-radius: 10%;
+    width: 40vw;
+    height: 20vw;
 }
 
 
-.titlemiddle{
-    font-family: sans-serif;
-    font-size: 36px;
-    font-weight: bolder;
-    color: #1F2937;
-    margin-top: 30px;
-    margin-bottom: 30px;
-align-self: center;}
-.innovation{
-    margin: 10px;
-    width: 180px;
-    height: 180px;
-}
-.knowledge{
-    width: 180px;
-    height: 180px;
-    margin-top: 10px;
-    margin-left: 10px;
-}
-.networking{
-    width: 180px;
-    height: 180px;
-    margin: 10px;
-}
-.technology{
-    width: 180px;
-    height: 180px;
-    margin: 10px;
-}
 
-.boxoneone{
-    border-radius: 15px;
-    width: 200px;
-    height: 200px;
-    border: 5px solid #3882F6;
+@media only screen and (max-width: 500px) { 
+    *{
+        background-color: #3882F6;
+    }
+    body{
+        background-color:#1F2937;
+        height: 100vh;
+        width: 100vw;
+     }
+     
+     .thiswebsite{
+        background-color: #1F2937;
+        color: #E5E7EB;
+        font-size: 3vh;
+     }
+     #fix{
+        height: 15.6vh;
+        background-color: #1F2937;
+     }
 }
-.boxtwotwo{
-    border-radius: 15px;
-    width: 200px;
-    height: 200px;
-    border: 5px solid #3882F6;
-}
-.boxthreethree{
-    border-radius: 15px;
-    border-style: solid;
-    width: 200px;
-    height: 200px;
-    border: 5px solid #3882F6;
-}
-.boxfourfour{
-    border-radius: 15px;
-    width: 200px;
-    height: 200px;
-    border: 5px solid #3882F6;
-}
-.middle{
-    margin-bottom: 100px;
-    gap: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.textone{
-   margin-top: 10px;
-    margin-left: 60px;
-    width: 180px;
-}
-.texttwo{
-    margin-top: 10px;
-    margin-left:60px;
-    width: 180px;
-}
-.textthree{
-    margin-top: 10px;
-    margin-left: 60px;
-    width: 180px;
-}
-.textfour{
-    margin-top: 10px;
-    margin-left: 60px;
-    width: 180px;
-}
-.buttom{
-    display: flex;
-    flex-direction: column;
-    background-color: #E5E7EB;
-    min-height: 300px;
-    justify-content: center;
-    align-items: center;
-}
-.bigwriting{
-    color: #1F2937;
-    font-size: 36px;
-    font-style:italic;
-    margin-left: 200px;
-    margin-right: 200px;
-}
-.quote{
-    font-weight: bolder;
-    margin-left: 400px;
-}
-.footer{
-    margin-top: 10px;
-    border-radius: 10px;
-    align-self: center;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 600px;
-    background-color: #3882F6;
-    height: 80px;
-    gap: 100px;
-    color: #E5E7EB;
-}
-.call{
-    font-weight: bolder;
-}
-.buttonfooter{
-    background-color: #3882F6;
-    color:#E5E7EB;
-    border-color: #E5E7EB;
-}
+     .websitedescription{
+        padding: 5vw;
+        margin-top: -2vh;
+        background-color: #1F2937;
+        color: #E5E7EB;
+        font-size:1vh;
+       }
+       .image1{
+        
+        background-color: #1F2937;
+        color: #E5E7EB;
+        filter: drop-shadow(0 .5vh 2vh rgb(199, 194, 200));;
+       }
+       .left{
+        
+        display: flex;
+        flex-direction: column;
+        gap: 2vh;
+    }
+    button{
+        border-radius: 10%;
+        margin-top: 4vh;
+        margin-left: 21vh;
+        align-self: center;
+        font-weight: bolder;
+        border-color:cornsilk;
+        font-size: 2vh;
+        width: 20vw;
+        box-shadow: .2vh .2vh 1vh white;
+        background-color: rgb(199, 47, 47);
+    }
+    .titlemiddle{
+        margin-bottom: 5vh;
+        font-size: 2.5vh;
+        margin-top: -80vh;
+        margin-left: 19vw;
+    }
+    .middle{
+        background-color: #3882F6;
+          margin-left: 4vw;
+        display: flex;
+        margin-bottom: 10vh;
+    }
+    #imagemiddle{
+        border-radius: 20%;
+        margin: 1vw;
+        filter: drop-shadow(0 .5vh 2vh rgb(199, 194, 200));;
+        width: 20vw;
+        height: 10vh;
+    }
+    @keyframes lights {
+        0% {
+          color: hsl(230, 40%, 80%);
+          text-shadow:
+            0 0 1em hsla(320, 100%, 50%, 0.2),
+            0 0 0.125em hsla(320, 100%, 60%, 0.3),
+            -1em -0.125em 0.5em hsla(40, 100%, 60%, 0),
+            1em 0.125em 0.5em hsla(200, 100%, 60%, 0);
+        }
+        
+        30% { 
+          color: hsl(230, 80%, 90%);
+          text-shadow:
+            0 0 1em hsla(320, 100%, 50%, 0.5),
+            0 0 0.125em hsla(320, 100%, 60%, 0.5),
+            -0.5em -0.125em 0.25em hsla(40, 100%, 60%, 0.2),
+            0.5em 0.125em 0.25em hsla(200, 100%, 60%, 0.4);
+        }
+        
+        40% { 
+          color: hsl(230, 100%, 95%);
+          text-shadow:
+            0 0 1em hsla(320, 100%, 50%, 0.5),
+            0 0 0.125em hsla(320, 100%, 90%, 0.5),
+            -0.25em -0.125em 0.125em hsla(40, 100%, 60%, 0.2),
+            0.25em 0.125em 0.125em hsla(200, 100%, 60%, 0.4);
+        }
+        
+        70% {
+          color: hsl(230, 80%, 90%);
+          text-shadow:
+            0 0 1em hsla(320, 100%, 50%, 0.5),
+            0 0 0.125em hsla(320, 100%, 60%, 0.5),
+            0.5em -0.125em 0.25em hsla(40, 100%, 60%, 0.2),
+            -0.5em 0.125em 0.25em hsla(200, 100%, 60%, 0.4);
+        }
+        
+        100% {
+          color: hsl(230, 40%, 80%);
+          text-shadow:
+            0 0 1em hsla(320, 100%, 50%, 0.2),
+            0 0 0.125em hsla(320, 100%, 60%, 0.3),
+            1em -0.125em 0.5em hsla(40, 100%, 60%, 0),
+            -1em 0.125em 0.5em hsla(200, 100%, 60%, 0);
+        }
+        
+      }
+      
+    #textmiddle{
+        margin-left: 4vw;
+        font-weight: 300;
+        animation: lights 3s 750ms linear infinite;
+        font-size: 3vw;
+    }
+    .buttom{ 
+        border-radius: 15%;
+        background-color:#1F2937;
+        margin-left: 15vw;
+        font-size: 2vh;
+    }
+    .quote{
+        padding: 5vw;
+        color: #E5E7EB;
+        background-color: #1F2937;
+        margin-left: 50vw;
+        margin-top: -1vh;
+    }
+    .bigwriting{
+        padding:5vw;
+        color: #E5E7EB;
+        background-color: #1F2937;
+    }
+    .footer{
+        background-color: #3882F6;
+        margin-top: 5vh;
+    }
+    .call{
 
+        margin-left: 15vw;
+        font-size: 3vh;
+    }
+    .footertext{
+        margin-left: 10vw;
+    }
+    .header{
+     border: .1vh solid black;
+    }
+    .top{
+        background-color: #1F2937;
+        color: #E5E7EB;
+    }
+    @media only screen and (min-width:600px) {
+        body{
+            background-color: #1F2937;
+            height: 100vh;
+            width: 100vw;
+            display: flex;
+            flex-direction: column;
+            margin: 0;
+        }
+        .header{
+            height: 5vh;
+            background-color: #1F2937;
+            display: flex;
+            justify-content: space-between;
+        }
+        .headerlink{
+            margin-top: 5px;
+            display: flex;
+            gap: 20px;
+            margin-right: 100px;
+        }
+        a{
+            text-decoration: none;
+            color: aliceblue;
+        }
+        .headerlogo{
+            margin-left: 100px;
+            margin-top: 5px;
+            color: whitesmoke;
+            font-weight: bold;
+        }
+        .top{
+            height:15vh ;
+            display: flex;
+            color:#F9FaF8 ;
+            background-color: #1F2937;
+        }
+        .right{
+            background-color:#1F2937;
+        }
+        .thiswebsite{
+        font-weight:bolder;
+        font-size: 48px;
+        }
+        .websitedescription{
+        font-size: 18px;
+        color: #e5e7eb;    
+        }
+        .right{
+            margin-right: 100px;
+        }
+     
+        .image1{
+            width: 40vh;
+            height: 20vh;
+            border-radius: 10%;
+        }
+        
+        
+        .titlemiddle{
+            font-family: sans-serif;
+            font-size: 36px;
+            font-weight: bolder;
+            color: #1F2937;
+            margin-top: 30px;
+            margin-bottom: 30px;
+        align-self: center;}
+        .innovation{
+            margin: 10px;
+            width: 180px;
+            height: 180px;
+        }
+        .knowledge{
+            width: 180px;
+            height: 180px;
+            margin-top: 10px;
+            margin-left: 10px;
+        }
+        .networking{
+            width: 180px;
+            height: 180px;
+            margin: 10px;
+        }
+        .technology{
+            width: 180px;
+            height: 180px;
+            margin: 10px;
+        }
+        
+        .boxoneone{
+            border-radius: 15px;
+            width: 20vh;
+            height: 20vh;
+            border: 5px solid #3882F6;
+        }
+        .boxtwotwo{
+            border-radius: 15px;
+            width: 20vh;
+            height: 20vh;
+            border: 5px solid #3882F6;
+        }
+        .boxthreethree{
+            border-radius: 15px;
+            border-style: solid;
+            width: 20vh;
+            height: 20vh;
+            border: 5px solid #3882F6;
+        }
+        .boxfourfour{
+            border-radius: 15px;
+            width: 20vh;
+            height: 20vh;
+            border: 5px solid #3882F6;
+        }
+        .middle{
+            width: 100vw;
+            margin: 0;
+            align-items: center;
+            justify-content: space-evenly;
+            display: flex;
 
+            
+            
+        }
+        #imagemiddle{
+            margin-left: 10vh;
+            height: 20vh;
+            width: 20vh;
+        }
+       
+        
+        .buttom{
+            display: flex;
+            flex-direction: column;;
+            justify-content: center;
+            align-items: center;
+        }
+        .bigwriting{
+            background-color: #1F2937;
+            color:#E5E7EB;
+            font-size: 4vh;
+            font-style:italic;
+
+        }
+        .quote{
+            background-color: transparent;
+            margin-top: -20vh;
+            font-weight: bolder;
+            margin-left: 400px;
+        }
+        .footer{
+
+            margin-top: -8vh;
+            border-radius: 10%;
+            align-self: center;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            width: 80vw;
+            background-color: #3882F6;
+            height: 80px;
+            gap: 100px;
+            color: #E5E7EB;
+        }
+        .call{
+            font-weight: bolder;
+        }
+        .buttonfooter{
+            background-color: #3882F6;
+            color:#E5E7EB;
+            border-color: #E5E7EB;
+        }
+    
+        #textmiddle{
+            margin-top: 5vh;
+        }
+    }
+    
